--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,14 @@
   "presets": [
     "env",
     "react"
+  ],
+  "plugins": [
+    [
+      "import", {
+        "libraryName": "antd",
+        "libraryDirectory": "es"
+      }
+    ],
+    "transform-class-properties"
   ]
 }
