--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "node-sass": "^4.10.0",
     "parcel-bundler": "^1.10.3",
+    "parcel-plugin-static-files-copy": "^1.2.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
