--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "node-sass": "^4.10.0",
     "parcel-bundler": "^1.10.3",
     "parcel-plugin-static-files-copy": "^1.2.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react": "^16.7.0",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
