--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "antd": "^3.11.0",
+    "antd": "^3.11.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.10.0",
     "parcel-bundler": "^1.10.3",
     "parcel-plugin-static-files-copy": "^1.2.4",
     "react": "^16.7.0",
     "react-dom": "^16.6.3",
+    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
