added spread operator babel plugin

--- a/.babelrc
+++ b/.babelrc
@@ -5,11 +5,13 @@
   ],
   "plugins": [
     [
-      "import", {
+      "import",
+      {
         "libraryName": "antd",
         "libraryDirectory": "es"
       }
     ],
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
