--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^3.11.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "firebase": "^5.7.2",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.10.0",
     "parcel-bundler": "^1.10.3",
