--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.6.3",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^4.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
